# gotest

./: Cargo.toml  README.md  gotest.sh
src/: main.rs
