[package]
name = "gotest"
version = "0.1.0"
edition = "2021"
authors= ["Aryan Shetty"]
description= "A testing utility wrapper for Go written in Rust and Bash"
readme = "README.md"
repository = "https://github.com/Aryan7901/gotest"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
